--- a/src/TempateCustomHeading.css
+++ b/src/TempateCustomHeading.css
@@ -9,7 +9,7 @@
   height: 70vh;
   background: rgb(48 51 64);
   border: 3px solid #b78e8e;
-  color: white;
+  color: #59b758;
 }
 .Editor_container {
   display: grid;
